[gd_scene load_steps=8 format=2]

[ext_resource path="res://tile-bg.png" type="Texture" id=1]
[ext_resource path="res://GameBoard.gd" type="Script" id=2]
[ext_resource path="res://Cursor.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI.gd" type="Script" id=4]
[ext_resource path="res://GameFont.theme" type="Theme" id=5]
[ext_resource path="res://paradise.wav" type="AudioStream" id=6]
[ext_resource path="res://Zoom-Simple-1.png" type="Texture" id=7]

[node name="World" type="Node2D"]

[node name="UI" type="Node2D" parent="."]
z_index = -5
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="UI"]
margin_right = 320.0
margin_bottom = 184.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextTile" type="Label" parent="UI"]
margin_left = 256.0
margin_top = 112.0
margin_right = 321.0
margin_bottom = 126.0
rect_pivot_offset = Vector2( 104, 96 )
theme = ExtResource( 5 )
text = "Next"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentTile" type="Label" parent="UI"]
margin_left = 256.0
margin_top = 48.0
margin_right = 320.0
margin_bottom = 62.0
rect_pivot_offset = Vector2( 104, 96 )
theme = ExtResource( 5 )
text = "Tile"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ARRLabel" type="Label" parent="UI"]
margin_left = 256.0
margin_right = 321.0
margin_bottom = 16.0
theme = ExtResource( 5 )
text = "ARR: $0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextImportTimer" type="Label" parent="UI"]
margin_left = 256.0
margin_top = 24.0
margin_right = 321.0
margin_bottom = 40.0
theme = ExtResource( 5 )
text = "Next Import:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextTileImage" type="TextureRect" parent="UI"]
margin_left = 256.0
margin_top = 128.0
margin_right = 320.0
margin_bottom = 176.0
rect_pivot_offset = Vector2( 104, 80 )
texture = ExtResource( 1 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentTileImage" type="TextureRect" parent="UI"]
margin_left = 256.0
margin_top = 64.0
margin_right = 320.0
margin_bottom = 112.0
rect_pivot_offset = Vector2( 104, 80 )
texture = ExtResource( 1 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImportTimer" type="Timer" parent="UI"]
wait_time = 10.0
autostart = true

[node name="GameBoard" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Cursor" parent="." instance=ExtResource( 3 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="timeout" from="UI/ImportTimer" to="GameBoard" method="_on_ImportTimer_timeout"]
